refactored register form and user methods
